--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-<h1>Hello World ;)</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kostadin Cvejoski</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
+</head>
+<body>
+  <header>
+    <h1>Kostadin Cvejoski</h1>
+    <p>Machine Learning Research Scientist</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#experience">Experience</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I specialize in NLP, time series, and generative models...</p>
+  </section>
+
+  <section id="experience">
+    <h2>Experience</h2>
+    <p>Details of my professional journey...</p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="carousel">
+      <div class="slide">Project 1</div>
+      <div class="slide">Project 2</div>
+      <div class="slide">Project 3</div>
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <form id="contactForm">
+      <label for="name">Name:</label>
+      <input type="text" id="name" required>
+      <label for="email">Email:</label>
+      <input type="email" id="email" required>
+      <button type="submit">Submit</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>&copy; 2024 Kostadin Cvejoski</p>
+  </footer>
+</body>
+</html>
