--- a/index.html
+++ b/index.html
@@ -19,35 +19,37 @@
     </nav>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I specialize in NLP, time series, and generative models...</p>
-  </section>
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>I specialize in NLP, time series, and generative models...</p>
+    </section>
 
-  <section id="experience">
-    <h2>Experience</h2>
-    <p>Details of my professional journey...</p>
-  </section>
+    <section id="experience">
+      <h2>Experience</h2>
+      <p>Details of my professional journey...</p>
+    </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="carousel">
-      <div class="slide">Project 1</div>
-      <div class="slide">Project 2</div>
-      <div class="slide">Project 3</div>
-    </div>
-  </section>
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="carousel">
+        <div class="slide">Project 1</div>
+        <div class="slide">Project 2</div>
+        <div class="slide">Project 3</div>
+      </div>
+    </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <form id="contactForm">
-      <label for="name">Name:</label>
-      <input type="text" id="name" required>
-      <label for="email">Email:</label>
-      <input type="email" id="email" required>
-      <button type="submit">Submit</button>
-    </form>
-  </section>
+    <section id="contact">
+      <h2>Contact</h2>
+      <form id="contactForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" required>
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+  </main>
 
   <footer>
     <p>&copy; 2024 Kostadin Cvejoski</p>
