--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kostadin Cvejoski</title>
+  <title>Kostadin Cvejoski - Machine Learning Research Scientist</title>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>Kostadin Cvejoski</h1>
-    <p>Machine Learning Research Scientist</p>
+    <div class="header-content">
+      <div class="logo">
+        <img src="your-image.jpg" alt="Kostadin Cvejoski" />
+      </div>
+      <div class="header-text">
+        <h1>Kostadin Cvejoski</h1>
+        <p>Machine Learning Research Scientist</p>
+      </div>
+    </div>
     <nav>
       <a href="#about">About</a>
       <a href="#experience">Experience</a>
@@ -20,32 +27,71 @@
   </header>
 
   <main>
+    <!-- About Section -->
     <section id="about">
       <h2>About Me</h2>
-      <p>I specialize in NLP, time series, and generative models...</p>
+      <p>
+        I am a Machine Learning Research Scientist with a PhD in Computer Science from the University of Bonn. 
+        My expertise includes Natural Language Processing (NLP), time series analysis, and generative AI. 
+        I lead and contribute to projects delivering cutting-edge ML solutions for industrial applications.
+      </p>
+      <ul>
+        <li>Core Competencies: Deep Learning, Statistics, LLMs, Generative AI, Probabilistic Models</li>
+        <li>ML Frameworks: PyTorch, TensorFlow, JAX</li>
+        <li>Languages: Python, Java, C++, JavaScript</li>
+      </ul>
     </section>
 
+    <!-- Experience Section -->
     <section id="experience">
       <h2>Experience</h2>
-      <p>Details of my professional journey...</p>
+      <h3>Fraunhofer IAIS</h3>
+      <p><strong>Team Leader</strong> (Sep 2023 - Present)</p>
+      <ul>
+        <li>Leading project management and interdisciplinary teams for industrial ML solutions.</li>
+        <li>Developing models for NLP, cybersecurity, predictive maintenance, and more.</li>
+      </ul>
+      <p><strong>ML Research Scientist</strong> (Aug 2016 - Present)</p>
+      <ul>
+        <li>Advanced research in NLP, integrating temporal dynamics into LLMs.</li>
+        <li>Developed state-of-the-art ML solutions for clients like PwC and Germany's Federal Criminal Police Office.</li>
+        <li>Worked on time series models, distributed training, and interpretability.</li>
+      </ul>
     </section>
 
+    <!-- Projects Section -->
     <section id="projects">
       <h2>Projects</h2>
       <div class="carousel">
-        <div class="slide">Project 1</div>
-        <div class="slide">Project 2</div>
-        <div class="slide">Project 3</div>
+        <div class="slide">
+          <h3>Password Guessing with LLMs</h3>
+          <p>Developed a novel LLM-based approach for password guessing, adopted by Germany's Federal Criminal Police Office.</p>
+        </div>
+        <div class="slide">
+          <h3>AI Benchmark Tool</h3>
+          <p>Collaborated with PwC Deutschland on an AI benchmarking tool for financial insights extraction.</p>
+        </div>
+        <div class="slide">
+          <h3>Time Series Foundation Models</h3>
+          <p>Ongoing research into foundation models for time series data and temporal point processes.</p>
+        </div>
       </div>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact">
       <h2>Contact</h2>
+      <p>Feel free to connect with me:</p>
+      <ul>
+        <li><a href="https://github.com/cvejoski" target="_blank">GitHub</a></li>
+        <li><a href="https://scholar.google.com/citations?hl=en&user=k1WSOfoAAAAJ" target="_blank">Google Scholar</a></li>
+        <li><a href="https://linkedin.com/in/cvejoski" target="_blank">LinkedIn</a></li>
+      </ul>
       <form id="contactForm">
         <label for="name">Name:</label>
-        <input type="text" id="name" required>
+        <input type="text" id="name" placeholder="Your Name" required>
         <label for="email">Email:</label>
-        <input type="email" id="email" required>
+        <input type="email" id="email" placeholder="Your Email" required>
         <button type="submit">Submit</button>
       </form>
     </section>
